<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Heart Rate -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/HeartRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dip"
            android:text="@string/HeartRateLabel" />
    
        <TextView
            android:id="@+id/HeartRateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:paddingRight="1dip"
            android:text="@string/DefaultValue" />
        
        <TextView
            android:id="@+id/HeartRateUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="0dip"
            android:paddingRight="4dip"
            android:text="@string/HeartRateUnit" />
    </LinearLayout>
    
    <!-- Temperature Reading -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/TemperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dip"
            android:text="@string/TemperatureLabel" />
    
        <TextView
            android:id="@+id/TemperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:paddingRight="1dip"
            android:text="@string/DefaultValue" />
        
        <TextView
            android:id="@+id/TemperatureUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="0dip"
            android:paddingRight="4dip"
            android:text="@string/TemperatureUnit" />
    </LinearLayout>
    
    <!-- Breathing Rate -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/BreathingRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dip"
            android:text="@string/BreathingRateLabel" />
    
        <TextView
            android:id="@+id/BreathingRateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:paddingRight="1dip"
            android:text="@string/DefaultValue" />
        
        <TextView
            android:id="@+id/BreathingRateUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="0dip"
            android:paddingRight="4dip"
            android:text="@string/BreathingRateUnit" />
    </LinearLayout>
    
    <!-- LatLong -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/LatLongLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dip"
            android:text="@string/LatLongLabel" />
    
        <TextView
            android:id="@+id/LatLongValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:paddingRight="1dip"
            android:text="@string/DefaultValue" />
        
        <TextView
            android:id="@+id/LatLongUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="0dip"
            android:paddingRight="4dip"
            android:text="@string/LatLongUnit" />
    </LinearLayout>
</LinearLayout>
    